<resources>
    <string name="app_name">pranjal_rana_s_application3</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id"/>
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token"/>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_user_domain_com">user@domain.com</string>
    <string name="lbl_united_states">United States</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account?</string>
    <string name="lbl_s"> s</string>
    <string name="lbl_the_mark_hotel">The Mark Hotel</string>
    <string name="lbl_recommended">Recommended</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_successfull">Successfull!</string>
    <string name="lbl_description">Description</string>
    <string name="msg_very_nice_and_c">Very nice and comfortable hotel, thank you for accompanying my vacation!</string>
    <string name="msg_istanbul_turki">Istanbul, Turkiye</string>
    <string name="lbl_zurich_swiss">Zurich, Swiss</string>
    <string name="lbl_we">We</string>
    <string name="lbl_fr">Fr</string>
    <string name="lbl_palms_casino">Palms Casino</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="lbl_dec_16_2024">Dec 16, 2024</string>
    <string name="lbl_53">53</string>
    <string name="lbl_50">$50</string>
    <string name="lbl_nearby">Nearby</string>
    <string name="msg_monte_carlo_hot">Monte-Carlo Hotel</string>
    <string name="lbl_download_ticket">Download Ticket</string>
    <string name="lbl_55">55</string>
    <string name="lbl_male">Male</string>
    <string name="msg_very_beautiful">Very beautiful hotel, my family and I are very satisfied with the service!</string>
    <string name="lbl_change">Change</string>
    <string name="lbl_homestays">Homestays</string>
    <string name="lbl_ticket">Ticket</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_my_bookmarks">My Bookmarks</string>
    <string name="msg_create_your_new">Create Your New Password</string>
    <string name="msg_hotel_booking_c">Hotel Booking Canceled</string>
    <string name="msg_code_has_been_s">Code has been send to +1 111 ******99</string>
    <string name="msg_resend_code_in">Resend code in 53 s</string>
    <string name="msg_pay_with_debit">Pay with Debit/Credit Card</string>
    <string name="lbl_expiry_date">Expiry date</string>
    <string name="msg_payment_success">Payment Successfull!</string>
    <string name="lbl_guest">Guest</string>
    <string name="msg_find_the_best_h">Find the best hotels for your vacation</string>
    <string name="lbl_meeting_room">Meeting Room</string>
    <string name="lbl_refund_383_8">Refund: $383.8</string>
    <string name="lbl_tu">Tu</string>
    <string name="lbl_star_rating">Star Rating</string>
    <string name="lbl_gender">Gender</string>
    <string name="msg_emeralda_de_hot">Emeralda De Hotel</string>
    <string name="msg_december_20_20">December 20, 2024</string>
    <string name="msg_continue_with_f">Continue with Facebook</string>
    <string name="msg_confirm_cancell">Confirm Cancellation</string>
    <string name="msg_are_you_sure_yo">Are you sure you want to log out?</string>
    <string name="msg_continue_with_a">Continue with Apple</string>
    <string name="lbl_hotel_location">Hotel Location</string>
    <string name="msg_successfully_ma">Successfully made payment and hotel booking</string>
    <string name="lbl_details">Details</string>
    <string name="msg_highest_popular">Highest Popularity</string>
    <string name="lbl_uder_domain_com">uder@domain.com</string>
    <string name="msg_continue_with_g">Continue with Google</string>
    <string name="lbl_face_id">Face ID</string>
    <string name="lbl_check_in">Check in</string>
    <string name="lbl_30">30</string>
    <string name="lbl_4_981_reviews">(4,981 reviews)</string>
    <string name="lbl_31">31</string>
    <string name="lbl_completed">Completed</string>
    <string name="lbl_su">Su</string>
    <string name="lbl_35">$35</string>
    <string name="lbl_32">$32</string>
    <string name="lbl_33">$33</string>
    <string name="lbl_38">$38</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_palazzo_hotel">Palazzo Hotel</string>
    <string name="lbl_36">$36</string>
    <string name="msg_e_wallet_has_be">E-Wallet has been connected to Helia</string>
    <string name="lbl_yesterday">Yesterday</string>
    <string name="lbl_total_435">Total: $435</string>
    <string name="lbl_select_date">Select Date</string>
    <string name="lbl_go_to_homepage">Go to Homepage</string>
    <string name="msg_verification_su">Verification Successful</string>
    <string name="msg_remove_from_boo">Remove from Bookmark?</string>
    <string name="msg_resend_code_in2">Resend code in 55 s</string>
    <string name="msg_2_step_verifica">2 step verification successful</string>
    <string name="lbl_110">+1</string>
    <string name="lbl_th">Th</string>
    <string name="lbl_per_night">/ per night</string>
    <string name="lbl_touch_id">Touch ID</string>
    <string name="lbl_gallery_photos">Gallery Photos</string>
    <string name="msg_let_s_discover">Let\u2019s discover the world with us</string>
    <string name="lbl_palazzo_versace">Palazzo Versace</string>
    <string name="lbl_check_out">Check out</string>
    <string name="lbl_20">20</string>
    <string name="lbl_restaurant">Restaurant</string>
    <string name="lbl_canceled">Canceled</string>
    <string name="lbl_190">190</string>
    <string name="lbl_23">23</string>
    <string name="lbl_facilites">Facilites</string>
    <string name="lbl_24">24</string>
    <string name="lbl_book_now">Book Now!</string>
    <string name="lbl_21">21</string>
    <string name="msg_general_notific">General Notification</string>
    <string name="lbl_22">2</string>
    <string name="lbl_turkiye">Turkiye</string>
    <string name="lbl_27">$27</string>
    <string name="lbl_28">28</string>
    <string name="lbl_25">25</string>
    <string name="lbl_26">26</string>
    <string name="lbl_hotels">Hotels</string>
    <string name="lbl_parking">Parking</string>
    <string name="msg_accommodation_t">Accommodation Type</string>
    <string name="msg_card_holder_nam">Card Holder name</string>
    <string name="msg_6373_2728_4797">6373 2728 4797 4679</string>
    <string name="lbl_29">29</string>
    <string name="lbl_5_nights">5 Nights</string>
    <string name="lbl_sa">Sa</string>
    <string name="lbl_1_111_99">+1 111 ******99</string>
    <string name="lbl_dec_10_2024">Dec 10, 2024</string>
    <string name="msg_laluna_hotel_bo">Laluna Hotel booking was successful!</string>
    <string name="msg_1_111_467_378">+1 111 467 378 399</string>
    <string name="lbl_bulgari_hotel">Bulgari Hotel</string>
    <string name="lbl_4_7">4.7</string>
    <string name="lbl_182">$18</string>
    <string name="lbl_4_6">4.6</string>
    <string name="lbl_4_9">4.9</string>
    <string name="lbl_4_8">4.8</string>
    <string name="lbl_ongoing">Ongoing</string>
    <string name="lbl_change_password">Change Password</string>
    <string name="lbl_12_27_1995">12/27/1995</string>
    <string name="lbl_review_score">Review Score</string>
    <string name="lbl_filter_hotel">Filter Hotel</string>
    <string name="lbl_12">12</string>
    <string name="lbl_13">13</string>
    <string name="lbl_10">10</string>
    <string name="lbl_11">11</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_16">16</string>
    <string name="lbl_later">Later</string>
    <string name="lbl_17">17</string>
    <string name="lbl_14">14</string>
    <string name="lbl_15">15</string>
    <string name="lbl_apply_filter">Apply Filter</string>
    <string name="lbl_dark_theme">Dark Theme</string>
    <string name="lbl_guy_hawkins">Guy Hawkins</string>
    <string name="lbl_18">18</string>
    <string name="lbl_435_00">$435.00</string>
    <string name="lbl_19">19</string>
    <string name="lbl_london_uk">London, UK</string>
    <string name="lbl_paid_479_5">Paid: $479.5</string>
    <string name="msg_palms_casino_ho">Palms Casino Hotel</string>
    <string name="lbl_skip">Skip</string>
    <string name="msg_daniel_austin_y">daniel_austin@yourdomain.com</string>
    <string name="lbl_292">$29</string>
    <string name="lbl_cancel_booking">Cancel Booking</string>
    <string name="lbl_night">/ night</string>
    <string name="msg_palazzo_versace">Palazzo Versace Dubai</string>
    <string name="lbl_remove">Remove</string>
    <string name="lbl_via_sms">via SMS:</string>
    <string name="lbl_apple_pay">Apple Pay</string>
    <string name="msg_lagonissi_royal">Lagonissi Royal Villa</string>
    <string name="msg_royale_presiden2">Royale President</string>
    <string name="msg_faena_hotel_mia">Faena Hotel Miami Beach</string>
    <string name="lbl_security">Security</string>
    <string name="msg_are_you_sure_yo2">Are you sure you want to cancel your hotel booking?</string>
    <string name="msg_forgot_the_pass">Forgot the password?</string>
    <string name="msg_1_123_456_789_000">+1 123 456 789 000</string>
    <string name="lbl_france">France</string>
    <string name="msg_hotel_martinez">Hotel Martinez Cannes</string>
    <string name="lbl_123456789000">123456789000</string>
    <string name="lbl_4000_sqft">4000 sqft</string>
    <string name="lbl_bulgari_resort">Bulgari Resort</string>
    <string name="msg2">\u2022\u2022\u2022\u2022 \u2022\u2022\u2022\u2022 \u2022\u2022\u2022\u2022 \u2022\u2022\u2022\u2022 \u2022\u2022\u2022\u2022</string>
    <string name="lbl_more">More</string>
    <string name="lbl_recently_booked">Recently Booked</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_recent">Recent</string>
    <string name="lbl_comfort">Comfort</string>
    <string name="lbl_4_bedrooms">4 Bedrooms</string>
    <string name="msg_recommended_58">Recommended (586,379)</string>
    <string name="msg_select_which_co">Select which contact details should we use to reset your password</string>
    <string name="lbl_or">or</string>
    <string name="lbl_update">Update</string>
    <string name="msg_amsterdam_neth">Amsterdam, Netherlands</string>
    <string name="lbl_welcome_to">Welcome to</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_swimming_pool">Swimming Pool</string>
    <string name="msg_account_verific">Account verification complete</string>
    <string name="msg_fill_your_profi">Fill Your Profile</string>
    <string name="lbl_02_30">02/30</string>
    <string name="msg_only_80_of_the">Only 80% of the money you can refund from your payment according to our policy</string>
    <string name="msg_taxes_fees_1">Taxes &amp; Fees (10%)</string>
    <string name="lbl_272">27</string>
    <string name="msg_faena_miami_bea">Faena Miami Beach</string>
    <string name="lbl_december_2024">December 2024</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_vibrate">Vibrate</string>
    <string name="lbl2">\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022</string>
    <string name="lbl3">*************</string>
    <string name="msg_lorem_ipsum_dol3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="msg_the_best_hotel">The best hotel booking in this century to accompany your vacation</string>
    <string name="lbl_daniel_austin">Daniel Austin</string>
    <string name="msg_london_united">London, United Kingdom</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_3">3</string>
    <string name="msg_martinez_cannes">Martinez Cannes Hotel</string>
    <string name="lbl_hotel">Hotel</string>
    <string name="msg_december_16_20">December 16, 2024</string>
</resources>