<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="onboardingTwoVM" type="com.pranjalranasapplication.app.modules.onboardingtwo.data.viewmodel.OnboardingTwoVM"/>
    </data>
    <LinearLayout android:id="@+id/linearOnboardingTwo"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_900">
        <ImageView android:gravity="center_horizontal"
            android:id="@+id/imageRectangleOne"
            android:layout_height="@dimen/_420pxv"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_rectangle1_420x428_2}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle1_420x428_2"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtFindthebesthoteOne"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@{onboardingTwoVM.onboardingTwoModel.txtFindthebesthoteOne}"
            style="@style/txtUrbanistromanbold32" tools:text="@string/msg_find_the_best_h"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtDescription"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:letterSpacing="0.01"
            android:text="@{onboardingTwoVM.onboardingTwoModel.txtDescription}"
            style="@style/txtUrbanistregular16_1" tools:text="@string/msg_lorem_ipsum_dol3"/>
        <FrameLayout android:id="@+id/frameGroup2557"
            android:layout_height="wrap_content" android:layout_width="match_parent"/>

        <com.asksira.loopingviewpager.indicator.CustomShapePagerIndicator
            android:id="@+id/indicatorMenu"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:drawable_normal="@drawable/indicator_unselected_bg_gray_800_radius_8"
            app:drawable_selected="@drawable/indicator_selected_bg_cyan_600_radius_8"
            app:indicator_size="@dimen/_8pxh" app:indicator_spacing="@dimen/_6pxh"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowskip"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/rectangle_bg_gray_800_radius_27"
                android:ellipsize="end"
                android:fontFamily="@font/urbanist"
                android:gravity="center" android:id="@+id/btnSkip"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_55pxv"
                android:layout_width="@dimen/_180pxh"
                android:letterSpacing="0.01"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_73pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@string/lbl_skip"
                android:textAllCaps="false"
                android:textColor="@color/white_A700"
                android:textFontWeight="700"
                android:textSize="@dimen/_16pxh"
                android:textStyle="bold" tools:text="@string/lbl_skip"/>
            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/rectangle_bg_cyan_600_01_radius_27"
                android:ellipsize="end"
                android:fontFamily="@font/urbanist"
                android:gravity="center" android:id="@+id/btnNext"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_54pxv"
                android:layout_width="@dimen/_180pxh"
                android:letterSpacing="0.01"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_72pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@string/lbl_next"
                android:textAllCaps="false"
                android:textColor="@color/white_A700"
                android:textFontWeight="700"
                android:textSize="@dimen/_16pxh"
                android:textStyle="bold" tools:text="@string/lbl_next"/>
        </LinearLayout>
    </LinearLayout>
</layout>
